@startuml pruebabd
!theme blueprint
skinparam dpi 300
skinparam linetype ortho
hide circle

entity Usuario {
  *idUsuario : INT [PK]
  --
  username : VARCHAR
  password : VARCHAR
}

entity Cliente {
  *idCliente : INT [PK]
  nombre : VARCHAR
}

entity Sesion {
  *idSesion : INT [PK]
  --
  fecha_inicio : DATE
  hora_inicio : TIME
  fecha_fin : DATE
  idUsuario : INT [FK]
}

Usuario ||--o{ Sesion : inicia
Cliente ||--|| Usuario : posee
@enduml
